[package]
name = "mlxcel-surgery"
version = "0.1.0"
edition = "2021"
description = "Weight-load surgery framework for mlxcel (structural fine-tuning)"
license = "Apache-2.0"

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
# WeightMap and WeightTransform trait — the integration point with the
# consolidated weight loaders in `mlxcel::models::sanitize` and
# `mlxcel::loading::vlm`.
mlxcel-core = { path = "../mlxcel-core", default-features = false }

# Public API surfaces serde-derived types (Issue #369 will build on top
# of these by adding `serde_yaml` and friends).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error type via `thiserror`.
thiserror = "2.0"

# Bridge into the consolidated loader's `Result<_, String>` /
# `anyhow::Error` interfaces.
anyhow = "1.0"

[dev-dependencies]
# A minimal "did the hook get called?" sanity test needs an
# interior-mutability counter; `std::sync::atomic` is enough.
