[package]
name = "mlxcel-surgery"
version = "0.1.0"
edition = "2021"
description = "Weight-load surgery framework for mlxcel (structural fine-tuning)"
license = "Apache-2.0"

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
# WeightMap and WeightTransform trait — the integration point with the
# consolidated weight loaders in `mlxcel::models::sanitize` and
# `mlxcel::loading::vlm`.
mlxcel-core = { path = "../mlxcel-core", default-features = false }

# Public API surfaces serde-derived types (#369 builds on top by
# adding `serde_yaml` for the YAML config schema).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# YAML configuration schema parser (#369). Pinned to the same version
# the top-level `mlxcel` crate already uses to keep the dependency
# graph small.
serde_yaml = "0.9"

# Glob-style tensor key patterns (#369). The same `globset` version is
# transitively present via tracing-subscriber's fluent layer, so we
# don't add a new transitive subtree here.
globset = "0.4"

# Error type via `thiserror`.
thiserror = "2.0"

# Bridge into the consolidated loader's `Result<_, String>` /
# `anyhow::Error` interfaces.
anyhow = "1.0"

[dev-dependencies]
# `tempfile` lets the integration tests build a YAML file plus
# adjacent donor `.safetensors` so the parser's relative-path
# resolution can be exercised without polluting the workspace.
tempfile = "3"

# `safetensors` writer used by AddOp's unit and integration tests to
# build synthetic donor task-vector files. Version pinned to the
# top-level `mlxcel` crate's pin to share a single transitive
# dependency.
safetensors = "0.7.0"
