# OpenXLA / StableHLO compiler-family inference backend for mlxcel (issue #449,
# ADR 0004 Track B). Default-off: the root crate pulls this in only under the
# `xla-backend` feature, so Apple-Silicon and CUDA shipping builds never compile
# it. This crate is the home of the engine that fills in the engine-neutral
# `InferenceSession` contract from mlxcel-core.
#
# Two gates:
#   * `xla-backend` (root) compiles the crate + seam. Without the `iree` feature
#     the crate is pure Rust and needs no native toolchain, so CI builds it with
#     no IREE distribution; prefill / decode_step return a clear not-built error.
#   * `iree` (this crate) turns on real execution: build.rs compiles the C shim
#     against the prebuilt IREE runtime (needs IREE_DIST) and the session drives
#     the #451-emitted prefill / decode_step vmfbs with resident weights and
#     on-device argmax. The root `xla-iree` feature enables it.
[package]
name = "mlxcel-xla"
version = "0.4.0"
edition = "2024"
description = "OpenXLA / StableHLO compiler-family inference backend for mlxcel (default-off)"
repository = "https://github.com/lablup/mlxcel"
license = "Apache-2.0"
build = "build.rs"

[features]
# Real IREE execution. Off by default so `--features xla-backend` stays buildable
# in CI (no IREE dist). When on, build.rs compiles csrc/xla_iree.c and links the
# prebuilt IREE runtime (IREE_DIST must point at the extracted dist).
iree = ["dep:safetensors", "dep:memmap2", "dep:sha2"]
# Test-only Gemma3n intermediate-oracle surface. Default-off and intentionally
# separate from `iree`, so production bundles never compile or load diagnostic
# MLIR unless the explicit root `xla-diagnostics` feature forwards this flag.
diagnostics = ["iree"]

[dependencies]
# The engine-neutral inference-session contract lives in mlxcel-core. This
# depends on mlxcel-core only for that trait; a later refactor could extract the
# contract to a leaf crate so the non-MLX backend does not compile MLX. The
# default build is unaffected either way (this crate is off unless `xla-backend`).
mlxcel-core = { path = "../mlxcel-core" }

# Weight loading (bf16 safetensors -> f32). Only pulled in under the `iree`
# feature, where the session uploads the real weights to the device.
safetensors = { version = "0.4", optional = true }
memmap2 = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
# config.json parsing: the emitter reads model dimensions from it to generate the
# graphs at load (always compiled with the crate), and the iree path also uses it.
serde_json = { version = "1" }

[build-dependencies]
cc = "1"
